--- a/src/app/componentes/education/education.component.html
+++ b/src/app/componentes/education/education.component.html
@@ -1,40 +1,48 @@
 <section class="academic" id="formacion">
-    <div class="academic__content">
-        <h2 class="academic__title">Formación académica</h2>
-        
-        <div class="academic__courses">
-            <div class="academic__courses__box" *ngFor="let educacion of educationList">
-                <ul class="academic__courses__list">
-                    <!-- Agregar logo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img [src]="educacion.img"></li>
-                    <li class="academic__courses__item__title">
-                        <h3>{{educacion.universidad}}</h3>
-                    </li>
-                    <li class="academic__courses__item__subtitle">
-                        <p>{{educacion.title}}</p>
-                    </li>
-                    <li class="academic__courses__item__subtitle">
-                        <p><time>{{educacion.start}}</time> - <time>{{educacion.end}}</time></p>
-                    </li>
-                </ul>
-                <div *ngIf="toggleState()" class="icon">
-                  <button mat-icon-button matTooltip="Agregar" aria-label="add cirle icon">
-                    <mat-icon class="material-symbols-outlined" aria-hidden="false" aria-label="icon"
-                      fontIcon="add_circle">
-                    </mat-icon>
-                  </button>
-                </div>
-            </div>
-            
-        </div>
-        
+  <div class="academic__content">
+    <h2 class="academic__title">Formación académica</h2>
+    <div *ngIf="toggleState()" class="example-button-row">
+      <button 
+      mat-icon-button 
+      matTooltip="Agregar" 
+      aria-label="add cirle icon" 
+      color="primary" 
+      (click)="openDialogNewEducation()">
+        <mat-icon class="material-symbols-outlined" aria-hidden="false" aria-label="icon" fontIcon="add_circle">
+        </mat-icon>
+      </button>
+    </div>
+    <div class="academic__courses">
+      <div class="academic__courses__box" *ngFor="let educacion of educationList">
+        <ul class="academic__courses__list">
+          <!-- Agregar logo de la institución de formación -->
+          <li class="academic__courses__item__img"><img [src]="educacion.urlLogo"></li>
+          <li class="academic__courses__item__title">
+            <h3>{{educacion.university}}</h3>
+          </li>
+          <li class="academic__courses__item__subtitle">
+            <p>{{educacion.title}}</p>
+          </li>
+          <li class="academic__courses__item__subtitle">
+            <p><time>{{educacion.startDate}}</time> - <time>{{educacion.endDate}}</time></p>
+          </li>
+        </ul>
+
         <div *ngIf="toggleState()" class="icon">
-          <button mat-icon-button matTooltip="Agregar" aria-label="add cirle icon">
-            <mat-icon class="material-symbols-outlined" aria-hidden="false" aria-label="icon" fontIcon="add_circle">
+          <button mat-icon-button matTooltip="Editar" color="primary" aria-label="edit icon"
+            (click)="openDialogEdit(educacion.id)">
+            <mat-icon class="material-symbols-outlined" aria-hidden="false" aria-label="icon"
+              fontIcon="drive_file_rename_outline"></mat-icon>
+          </button>
+          <button mat-icon-button matTooltip="Eliminar" color="warn" aria-label="delete icon"
+            (click)="onDelete(educacion.id)">
+            <mat-icon class="material-symbols-outlined" aria-hidden="false" aria-label="icon" fontIcon="delete">
             </mat-icon>
           </button>
         </div>
-        <mat-divider></mat-divider>
-    </div> 
-    
+      </div>
+    </div>
+    <mat-divider></mat-divider>
+  </div>
+
 </section>
