--- a/src/app/componentes/education/education.component.css
+++ b/src/app/componentes/education/education.component.css
@@ -7,6 +7,7 @@
 .academic__content{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 70%;
     margin: auto;
     gap: 2rem;
@@ -24,13 +25,7 @@
 }
 
 .academic__courses__box{
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
     width: 30%;
-    height: 330px;
 }
 .academic__courses__list{
     display: flex;
