--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -24,8 +24,8 @@
         <div *ngIf="toggleState()" class="icon">
           <button mat-icon-button color="accent" matTooltip="Editar" aria-label="edit icon"
             (click)="openDialogEdit(skill.id)">
-            <mat-icon class="material-icons" aria-hidden="false" aria-label="icon"
-              fontIcon="mode_edit"></mat-icon>
+            <mat-icon class="material-symbols-outlined" aria-hidden="false" aria-label="icon"
+              fontIcon="drive_file_rename_outline"></mat-icon>
           </button>
           <button mat-icon-button color="warn" matTooltip="Eliminar" aria-label="delete icon"
             (click)="delete(skill.id)">
