--- a/src/app/componentes/contact/contact.component.html
+++ b/src/app/componentes/contact/contact.component.html
@@ -1,13 +1,31 @@
 <section class="formcontato" id="contacto">
     <div class="formcontato__contacto">
         <div class="formcontato--esquerda">
-            <img class="formcontato__img" src="../assets/images/contact1.svg">
+            <img class="formcontato__img" src="../assets/image/contact1.svg">
         </div>
 
         <div class="formcontato__text">
             <h2 class="formcontato__title">Contacto</h2>
             <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
-            <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted.</h3>
+            <section>
+                <div class="example-button-row">
+                  <div class="example-flex-container">
+                    <a mat-icon-button href="https://github.com/Leangon" target="_blank"><i class="fa-brands fa-github"></i>
+                    </a>
+                    <a mat-icon-button href="https://www.linkedin.com/in/leandro-gonza/" target="_blank"><i
+                        class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a mat-icon-button href="https://www.instagram.com/leamgonza/" target="_blank"><i
+                        class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a mat-icon-button href="https://twitter.com/LeandroGonh" target="_blank"><i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a mat-icon-button href="https://wa.link/2727e9" target="_blank"><i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                  </div>
+                </div>
+              </section>
+            <!-- <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted.</h3>
             <form class="form" name="form" method="POST">
                 <div class="input-container">
                     <input class="input" id="name" type="text" name="name" placeholder="Nombre" required data-tipo="nombre">
@@ -33,7 +51,7 @@
                 type="submit" 
                 class="formcontato__boton"
                 >Enviar mensaje</button>
-            </form>
+            </form> -->
         </div>
     </div>
 </section>
