--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,6 +1,24 @@
 <section class="footer">
-    <footer class="footer__rodape">
-        <p>Desarrollado por leamgon</p>
-        <p>Copyright © <span id="year"></span> <a href="#"></a> </p>
-    </footer>
+  <footer class="footer__rodape">
+    <section>
+      <div class="example-button-row">
+        <div class="example-flex-container">
+          <a mat-icon-button href="https://github.com/Leangon" target="_blank"><i class="fa-brands fa-github"></i>
+          </a>
+          <a mat-icon-button href="https://www.linkedin.com/in/leandro-gonza/" target="_blank"><i
+              class="fa-brands fa-linkedin-in"></i>
+          </a>
+          <a mat-icon-button href="https://www.instagram.com/leamgonza/" target="_blank"><i
+              class="fa-brands fa-instagram"></i>
+          </a>
+          <a mat-icon-button href="https://twitter.com/LeandroGonh" target="_blank"><i class="fa-brands fa-twitter"></i>
+          </a>
+          <a mat-icon-button href="https://wa.link/2727e9" target="_blank"><i class="fa-brands fa-whatsapp"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+    <p>Desarrollado por leamgon</p>
+    <p>Copyright © <span id="year"></span> <a href="#"></a> </p>
+  </footer>
 </section>
