--- a/src/app/componentes/projects/projects.component.scss
+++ b/src/app/componentes/projects/projects.component.scss
@@ -44,9 +44,9 @@
     border-radius: 15px;
   }
 
-  a {
-    color: #fff;
-  }
+  // a {
+  //   color: #fff;
+  // }
 
   .experience__description{
     display: flex;
