--- a/src/app/componentes/profile/profile-edit.component.html
+++ b/src/app/componentes/profile/profile-edit.component.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content *ngIf="data">
-    <h1 mat-dialog-title>Agregar Skill</h1>
+    <h1 mat-dialog-title>Editar perfil</h1>
     <form class="d-flex flex-column mb-2" class="form" [formGroup]="form" (ngSubmit)="onUpdate($event)">
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Titulo</mat-label>
@@ -37,23 +37,14 @@
         </mat-error>
       </mat-form-field>
   
-      <!-- <mat-form-field appearance="outline" class="full-width">
-        <mat-label>Url de la imagen</mat-label>
-        <input matInput formControlName="urlImage" placeholder="http:" value="" [(ngModel)]="urlImage">
-        <mat-icon matSuffix>link</mat-icon>
-      </mat-form-field> -->
-  
       <div>
         <label for="image">Seleccione una imagen</label>
-        <input type="file" class="form-control" id="imagen" name="imagen" formControlName="urlImage" [(ngModel)]="urlImage" [ngClass]="{'is-invalid': UrlImageInvalid, 'is-valid': UrlImageValid}" (change)="uploadImage($event)" accept=".jpg, .png">
-        <div *ngIf="UrlImage?.errors && UrlImage?.touched">
-          <p *ngIf="UrlImage?.hasError('required')" class="error">Debe seleccionar una imagen</p>
-        </div>
+        <input type="file" class="form-control" id="imagen" name="imagen" [(ngModel)]="urlImage" (change)="uploadImage($event)" accept=".jpg, .png">
       </div>
   
-      <mat-dialog-actions class="d-flex justify-content-around buttons">
-        <button mat-raised-button color="primary" [mat-dialog-close]="true" (click)="onUpdate($event)">Guardar</button>
-        <button mat-raised-button color="accent" mat-dialog-close routerLink="">Volver</button>
+      <mat-dialog-actions class="action">
+        <button mat-raised-button type="button" [mat-dialog-close]="false" routerLink="">Cerrar</button>
+        <button mat-raised-button color="primary" type="submit">Guardar</button>
       </mat-dialog-actions>
     </form>
   </div>
