--- a/src/app/componentes/skills/new-skill.component.html
+++ b/src/app/componentes/skills/new-skill.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-content>
   <h1 mat-dialog-title>Agregar Skill</h1>
   <form class="form d-flex flex-column mb-2" class="form" [formGroup]="form" (ngSubmit)="onAdd($event)">
-    <mat-form-field appearance="fill" class="full-width">
+    <mat-form-field appearance="outline" class="full-width">
       <mat-label>Nombre de Skill</mat-label>
       <input type="name" matInput formControlName="name" placeholder="Ej.: Spring Boot" [(ngModel)]="name">
       <mat-icon matSuffix>badge</mat-icon>
@@ -10,7 +10,7 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-form-field class="full-width" appearance="fill">
+    <mat-form-field class="full-width" appearance="outline">
       <mat-label>Porcentaje de la Skill</mat-label>
       <input type="number" matInput formControlName="percent" placeholder="Ej.: 65" value="" [(ngModel)]="percent">
       <mat-icon matSuffix>percent</mat-icon>
@@ -22,12 +22,6 @@
       </mat-error>
     </mat-form-field>
 
-    <!-- <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Url de la imagen</mat-label>
-      <input matInput formControlName="urlImage" placeholder="http:" value="" [(ngModel)]="urlImage">
-      <mat-icon matSuffix>link</mat-icon>
-    </mat-form-field> -->
-
     <div>
       <label for="image">Seleccione una imagen</label>
       <input type="file" class="form-control" id="imagen" name="imagen" formControlName="urlImage" [(ngModel)]="urlImage" [ngClass]="{'is-invalid': UrlImageInvalid, 'is-valid': UrlImageValid}" (change)="uploadImage($event)" accept=".jpg, .png">
@@ -36,9 +30,9 @@
       </div>
     </div>
 
-    <mat-dialog-actions class="d-flex justify-content-around buttons">
-      <button mat-raised-button color="primary">Agregar</button>
-      <button mat-raised-button color="accent" mat-dialog-close routerLink="">Cerrar</button>
+    <mat-dialog-actions class="action">
+      <button mat-raised-button type="button" [mat-dialog-close]="false" routerLink="">Cerrar</button>
+      <button mat-raised-button color="primary" type="submit">Agregar</button>
     </mat-dialog-actions>
   </form>
 </div>
